<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_project"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/tw__composer_white"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="56dp"
        android:layout_height="61dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:clickable="true"
        android:elevation="5dp"
        android:scaleType="center"
        android:src="@drawable/baseline_add_circle_black_18dp"
        android:tint="@android:color/holo_blue_light"
        app:backgroundTint="@color/tw__composer_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>