...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_proj_loc_mp" />

    <Button
        android:id="@+id/button_add_emplyee_mp"
        android:layout_width="61dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="+"
        android:textSize="24sp"
...
