<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tw__composer_white"
    android:padding="16dp"
    tools:layout_editor_absoluteY="25dp">


    <EditText
        android:id="@+id/edit_text_reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/twitter_login_button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/tw__composer_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewReg" />

    <EditText
        android:id="@+id/edit_text_reg_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/twitter_login_button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="User Name"
        android:inputType="textEmailAddress"
        android:textColor="@color/tw__composer_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_reg_email" />

    <EditText
        android:id="@+id/edit_text_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_login_email"
        android:layout_alignEnd="@+id/edit_text_login_email"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/tw__composer_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_reg_user_name" />


    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/edit_text_login_email"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="SIGN UP"
        android:textColor="@color/tw__composer_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_reg" />


    <ImageView
        android:id="@+id/imageViewReg"
        android:layout_width="198dp"
        android:layout_height="144dp"
        android:layout_alignStart="@+id/google_signin_button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/timesheet" />

    <TextView
        android:id="@+id/text_view_reg_login"
        android:layout_width="155dp"
        android:layout_height="17dp"
        android:layout_marginTop="8dp"
        android:text="LOGIN INSTEAD"
        android:textColor="@color/tw__composer_black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

    <RadioGroup
        android:id="@+id/radio_group_reg"
        android:layout_width="108dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_reg_password">

        <RadioButton
            android:id="@+id/radio_button_employer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Employer" />

        <RadioButton
            android:id="@+id/radio_button_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Employee" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>


