...
    <string name="display_name">DISPLAY NAME</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="defaultStatus">Welcome to ETIme!!</string>
    <string name="default_notification_channel_id">ET_CH_01</string>
    <string name="ts_notification_channel_id">ET_CH_02</string>
    <string name="registration_failed">Error, could not create user</string>
    <string name="acc_notification_icon">timesheet.png</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="decline_project_request">Decline Project Request</string>
...
