...
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>


    <Button
        android:id="@+id/button_ts_accept"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/accept"
...
